# surreal-migraine

./: Cargo.toml  LICENSE  README.md
.cargo/: audit.toml
.github/workflows/: cd.yml  ci.yml
cli/: Cargo.toml
cli/src/: cli.rs  fs.rs  name.rs
cli/tests/: integration_adds.rs  integration_paired.rs
examples/: embedded_runner.rs
src/: cli.rs  consts.rs  fs.rs  lib.rs  main.rs  types.rs
tests/: integration_adds.rs  integration_paired.rs  integration_types.rs  runner.rs  sources.rs
tests/migrations/: 000_init_schema.surql
tests/migrations/001_add_posts/: down.surql  up.surql
