[package]
name = "surreal-migraine"
version = "0.1.11"
edition = "2024"
description = "Small CLI to create SurrealDB migration files with numeric or temporal prefixes."
license = "MIT"
readme = "README.md"
repository = "https://github.com/MordechaiHadad/surreal-migraine"
default-run = "smg"

[dependencies]
chrono = { version = "0.4.41", optional = true }
clap = { version = "4.5.45", features = ["derive"], optional = true }
color-eyre = { version = "0.6.5", optional = true }
eyre = "0.6.12"
regex = "1.11.1"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"], optional = true }
surrealdb = { version = "2.3.7", default-features = false }
serde_json = { version = "1.0" }
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
assert_cmd = "2.0.17"
predicates = "3.1.3"
tempfile = "3.20.0"

[features]
default = []

cli = ["dep:color-eyre", "dep:tracing-subscriber", "dep:chrono", "dep:clap"]

[[bin]]
name = "smg"
path = "src/main.rs"
required-features = ["cli"]