[workspace]
members = ["cli"]
default-members = ["cli"]
resolver = "3"

[workspace.package]
version = "1.0.0"
edition = "2024"
license = "MIT"
readme = "README.md"
repository = "https://github.com/MordechaiHadad/surreal-migraine"

[workspace.dependencies]
eyre = "0.6.12"
tracing = "0.1.41"
surrealdb = { version = "2.3.7", default-features = false }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }

[package]
name = "surreal-migraine"
description = "A library for managing surrealdb migrations"
version.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true
readme.workspace = true

[dependencies]
eyre.workspace = true
surrealdb.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true