[package]
name = "surreal-migraine-cli"
description = "CLI tool for managing SurrealDB migrations"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true

[[bin]]
name = "smg"
path = "src/main.rs"

[dependencies]
chrono = "0.4.41"
clap = { version = "4.5.45", features = ["derive"] }
color-eyre = "0.6.5"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
regex = "1.11.1"
eyre.workspace = true
tracing.workspace = true

[dev-dependencies]
assert_cmd = "2.0.17"
predicates = "3.1.3"
tempfile.workspace = true